# neoactivemq-cpp

./: .clang-format  .env  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README.txt  docker-compose.yml  neoactivemq-cpp-config.cmake  vcpkg-configuration.json  vcpkg.json
activemq-cpp/: CMakeLists.txt  CMakePresets.json  README.txt  README_CMAKE.md  activemq-cpp.spec  build-with-vcpkg.sh  cleanup-legacy-build.sh  vcpkg-configuration.json
activemq-cpp/.github/: copilot-instructions.md
activemq-cpp/assembly/: source.xml
activemq-cpp/src/examples/: CMakeLists.txt  main.cpp
activemq-cpp/src/examples/advisories/: AdvisoryConsumer.cpp  AdvisoryConsumer.h  AdvisoryConsumerMain.cpp  AdvisoryProducer.cpp  AdvisoryProducer.h  AdvisoryProducerMain.cpp  TempDestinationAdvisoryConsumer.cpp  TempDestinationAdvisoryConsumer.h  TempDestinationAdvisoryConsumerMain.cpp  TempDestinationAdvisoryProducerMain.cpp
activemq-cpp/src/examples/cmstemplate/: CMSTemplateReceiver.cpp  CMSTemplateSender.cpp
activemq-cpp/src/examples/cmstemplate-stress/: CMSTestMultipleSendersReceivers.cpp  CmsMessageCreator.cpp  CmsMessageCreator.h  CmsMessageHandlerDefinitions.h  ConnectionFactoryMgr.cpp  ConnectionFactoryMgr.h  MessagingTask.cpp  MessagingTask.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  TestSenderAndReceiver.cpp  TestSenderAndReceiver.h
activemq-cpp/src/examples/consumers/: SimpleAsyncConsumer.cpp
activemq-cpp/src/examples/producers/: SimpleProducer.cpp
activemq-cpp/src/examples/stress-test/: BrokerMonitor.cpp  BrokerMonitor.h  CmsMessageCreator.cpp  CmsMessageCreator.h  CmsMessageHandlerDefinitions.h  CmsStress.cpp  ConnectionFactoryMgr.cpp  ConnectionFactoryMgr.h  MessagingTask.cpp  MessagingTask.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  TestSenderAndReceiver.cpp  TestSenderAndReceiver.h
activemq-cpp/src/examples/topics/chat/: Chat.cpp  Chat.h
activemq-cpp/src/main/: CMakeLists.txt  Makefile.am
activemq-cpp/src/main/activemq/: CMakeLists.txt
activemq-cpp/src/main/activemq/cmsutil/: CachedConsumer.cpp  CachedConsumer.h  CachedProducer.cpp  CachedProducer.h  CmsAccessor.cpp  CmsAccessor.h  CmsDestinationAccessor.cpp  CmsDestinationAccessor.h  CmsTemplate.cpp  CmsTemplate.h  DestinationResolver.cpp  DestinationResolver.h  DynamicDestinationResolver.cpp  DynamicDestinationResolver.h  MessageCreator.cpp  MessageCreator.h  PooledSession.cpp  PooledSession.h  ProducerCallback.cpp  ProducerCallback.h  ResourceLifecycleManager.cpp  ResourceLifecycleManager.h  SessionCallback.cpp  SessionCallback.h  SessionPool.cpp  SessionPool.h
activemq-cpp/src/main/activemq/commands/: ActiveMQBlobMessage.cpp  ActiveMQBlobMessage.h  ActiveMQBytesMessage.cpp  ActiveMQBytesMessage.h  ActiveMQDestination.cpp  ActiveMQDestination.h  ActiveMQMapMessage.cpp  ActiveMQMapMessage.h  ActiveMQMessage.cpp  ActiveMQMessage.h  ActiveMQMessageTemplate.h  ActiveMQObjectMessage.cpp  ActiveMQObjectMessage.h  ActiveMQQueue.cpp  ActiveMQQueue.h  ActiveMQStreamMessage.cpp  ActiveMQStreamMessage.h  ActiveMQTempDestination.cpp  ActiveMQTempDestination.h  ActiveMQTempQueue.cpp  ActiveMQTempQueue.h  ActiveMQTempTopic.cpp  ActiveMQTempTopic.h  ActiveMQTextMessage.cpp  ActiveMQTextMessage.h  ActiveMQTopic.cpp  ActiveMQTopic.h  BaseCommand.h  BaseDataStructure.h  BooleanExpression.h  BrokerError.cpp  BrokerError.h  BrokerId.cpp  BrokerId.h  BrokerInfo.cpp  BrokerInfo.h  Command.h  ConnectionControl.cpp  ConnectionControl.h  ConnectionError.cpp  (+88 more)
activemq-cpp/src/main/activemq/core/: ActiveMQAckHandler.cpp  ActiveMQAckHandler.h  ActiveMQConnection.cpp  ActiveMQConnection.h  ActiveMQConnectionFactory.cpp  ActiveMQConnectionFactory.h  ActiveMQConnectionMetaData.cpp  ActiveMQConnectionMetaData.h  ActiveMQConstants.cpp  ActiveMQConstants.h  ActiveMQConsumer.cpp  ActiveMQConsumer.h  ActiveMQDestinationEvent.cpp  ActiveMQDestinationEvent.h  ActiveMQDestinationSource.cpp  ActiveMQDestinationSource.h  ActiveMQMessageAudit.cpp  ActiveMQMessageAudit.h  ActiveMQProducer.cpp  ActiveMQProducer.h  ActiveMQQueueBrowser.cpp  ActiveMQQueueBrowser.h  ActiveMQSession.cpp  ActiveMQSession.h  ActiveMQSessionExecutor.cpp  ActiveMQSessionExecutor.h  ActiveMQTransactionContext.cpp  ActiveMQTransactionContext.h  ActiveMQXAConnection.cpp  ActiveMQXAConnection.h  ActiveMQXAConnectionFactory.cpp  ActiveMQXAConnectionFactory.h  ActiveMQXASession.cpp  ActiveMQXASession.h  AdvisoryConsumer.cpp  AdvisoryConsumer.h  ConnectionAudit.cpp  ConnectionAudit.h  DispatchData.cpp  DispatchData.h  (+14 more)
activemq-cpp/src/main/activemq/exceptions/: ActiveMQException.cpp  ActiveMQException.h  BrokerException.cpp  (+11 more)
activemq-cpp/src/main/cms/: AsyncCallback.cpp  AsyncCallback.h  BytesMessage.cpp  BytesMessage.h  CMSException.cpp  CMSException.h  CMSProperties.cpp  CMSProperties.h  CMSSecurityException.cpp  CMSSecurityException.h  CMakeLists.txt  Closeable.cpp  Closeable.h  Config.h  Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionMetaData.cpp  ConnectionMetaData.h  DeliveryMode.cpp  DeliveryMode.h  Destination.cpp  Destination.h  DestinationEvent.cpp  DestinationEvent.h  DestinationListener.cpp  DestinationListener.h  DestinationSource.cpp  DestinationSource.h  EnhancedConnection.cpp  EnhancedConnection.h  ExceptionListener.cpp  ExceptionListener.h  IllegalStateException.cpp  IllegalStateException.h  InvalidClientIdException.cpp  InvalidClientIdException.h  InvalidDestinationException.cpp  InvalidDestinationException.h  (+68 more)
activemq-cpp/src/main/decaf/: CMakeLists.txt
activemq-cpp/src/test/: CMakeLists.txt  main.cpp  testRegistry.cpp
activemq-cpp/src/test-benchmarks/: CMakeLists.txt  main.cpp  testRegistry.cpp
activemq-cpp/src/test-benchmarks/benchmark/: BenchmarkBase.h  PerformanceTimer.cpp  PerformanceTimer.h
activemq-cpp/src/test-integration/: CMakeLists.txt  TestRegistry.cpp  main.cpp
activemq-cpp/src/test-integration-benchmarks/: CMakeLists.txt  main.cpp
activemq-cpp/src/test-system/: CMakeLists.txt  main.cpp
activemq-cpp/src/test/util/: StackTrace.cpp  StackTrace.h  TestWatchdog.h
(+1491 files in other folders)
