cmake_minimum_required(VERSION 3.15)
project(neoactivemq-cpp LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Enable compiler caching if available (ccache or sccache)
# Prefer sccache if both are available
find_program(SCCACHE_PROGRAM sccache)
find_program(CCACHE_PROGRAM ccache)

if(SCCACHE_PROGRAM)
    set(CACHE_PROGRAM ${SCCACHE_PROGRAM})
    set(CACHE_NAME "sccache")
elseif(CCACHE_PROGRAM)
    set(CACHE_PROGRAM ${CCACHE_PROGRAM})
    set(CACHE_NAME "ccache")
endif()

if(CACHE_PROGRAM)
    message(STATUS "Found ${CACHE_NAME}: ${CACHE_PROGRAM}")
    # Verify the cache program is actually executable before setting it as launcher
    execute_process(
        COMMAND ${CACHE_PROGRAM} --version
        RESULT_VARIABLE CACHE_TEST_RESULT
        OUTPUT_QUIET
        ERROR_QUIET
    )
    if(CACHE_TEST_RESULT EQUAL 0)
        # Only enable cache for Debug builds
        # Release builds use /Zi which requires proper PDB handling
        if(CMAKE_BUILD_TYPE STREQUAL "Debug")
            set(CMAKE_C_COMPILER_LAUNCHER "${CACHE_PROGRAM}")
            set(CMAKE_CXX_COMPILER_LAUNCHER "${CACHE_PROGRAM}")
            message(STATUS "${CACHE_NAME} enabled for Debug builds")
        else()
            message(STATUS "${CACHE_NAME} found but disabled for Release builds (requires /Zi)")
        endif()
    else()
        message(STATUS "${CACHE_NAME} found but not working - builds will proceed without caching")
    endif()
else()
    message(STATUS "No compiler cache (ccache/sccache) found - builds will proceed without caching")
endif()

# Platform-specific debug flags
if(MSVC)
    # Windows/MSVC: Use /Z7 for debug builds (embedded in .obj, avoids PDB locking with parallel builds)
    # Use /Zi for release builds (separate .pdb file for production debugging)
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT $<$<CONFIG:Debug>:Z7>$<$<CONFIG:Release>:Zi>)
    set(CMAKE_CXX_FLAGS_DEBUG "/Od")
    set(CMAKE_CXX_FLAGS_RELEASE "/O2")
else()
    # GCC/Clang (Linux, macOS, MinGW): Use -g3 for detailed debug info, -O0 for no optimization
    set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0")

    # -rdynamic is Linux-specific (exports symbols for backtraces)
	set(CMAKE_EXE_LINKER_FLAGS_DEBUG "-rdynamic")
endif()

# Output directories for binaries and libraries
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(asio CONFIG REQUIRED)
find_package(ZLIB REQUIRED)

# Options
option(AMQCPP_BUILD_EXAMPLES "Build example programs" ON)
option(WITH_TESTS "Build all tests (unit, benchmark, integration)" OFF)
option(AMQCPP_SHARED_LIB "Build shared library instead of static" OFF)

# Option to enable/disable SSL support. When ON, OpenSSL is required.
option(AMQCPP_USE_SSL "Enable OpenSSL support (required when ON)" ON)

if(AMQCPP_USE_SSL)
	find_package(OpenSSL REQUIRED)
	message(STATUS "AMQCPP: SSL support enabled; OpenSSL will be required.")

	# If OpenSSL was found, define HAVE_OPENSSL for the code so sources
	# can use `#ifdef HAVE_OPENSSL` to enable OpenSSL-dependent features.
	if(OpenSSL_FOUND)
		message(STATUS "AMQCPP: Found OpenSSL ${OPENSSL_VERSION}")
		add_compile_definitions(HAVE_OPENSSL)
		set(AMQCPP_HAVE_OPENSSL ON CACHE INTERNAL "OpenSSL available")
	else()
		message(STATUS "AMQCPP: OpenSSL not found; HAVE_OPENSSL will not be defined")
		set(AMQCPP_HAVE_OPENSSL OFF CACHE INTERNAL "OpenSSL available")
	endif()
else()
	find_package(OpenSSL QUIET)
	message(STATUS "AMQCPP: SSL support disabled; OpenSSL will be optional.")
endif()

## Inline `src/CMakeLists.txt` content so project can be configured from
## the top-level CMake without a separate `src` directory CMakeLists.

# Build component libraries in `src/main` and tests/examples under `src`

# Add component subdirectories if present (paths are relative to project root)
add_subdirectory(activemq-cpp/src/main/decaf)
add_subdirectory(activemq-cpp/src/main/activemq)
add_subdirectory(activemq-cpp/src/main/cms)

# Create a single unified INTERFACE library that bundles all components
# This allows users to simply: target_link_libraries(myapp PRIVATE neoactivemq-cpp::neoactivemq-cpp)
# The component libraries (activemq_cms, activemq_core, decaf) are the actual libraries
add_library(neoactivemq-cpp INTERFACE)
target_link_libraries(neoactivemq-cpp INTERFACE activemq_cms activemq_core decaf)
add_library(neoactivemq-cpp::neoactivemq-cpp ALIAS neoactivemq-cpp)

add_subdirectory(activemq-cpp/src/examples)

if(WITH_TESTS)
    find_package(CppUnit CONFIG REQUIRED)
	add_subdirectory(activemq-cpp/src/test)
	add_subdirectory(activemq-cpp/src/test-benchmarks)
	add_subdirectory(activemq-cpp/src/test-integration)

	# Enable CTest and register the test executables
	enable_testing()

	# Register unit tests
	add_test(NAME neoactivemq-unit-tests COMMAND neoactivemq-test)
	set_tests_properties(neoactivemq-unit-tests PROPERTIES
		TIMEOUT 3000
		ENVIRONMENT "CTEST_OUTPUT_ON_FAILURE=1"
	)

	# Register benchmark tests
	add_test(NAME neoactivemq-benchmarks COMMAND neoactivemq-benchmark)
	set_tests_properties(neoactivemq-benchmarks PROPERTIES
		TIMEOUT 600
		ENVIRONMENT "CTEST_OUTPUT_ON_FAILURE=1"
	)

	# Register integration tests with automatic Docker management
	# Setup fixture: Start Docker before integration tests
	add_test(NAME integration-docker-start
		COMMAND docker compose up -d
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	)
	set_tests_properties(integration-docker-start PROPERTIES
		FIXTURES_SETUP IntegrationFixture
		LABELS "integration;fixture"
	)

	# Wait for ActiveMQ to be ready (health check)
	add_test(NAME integration-docker-wait
		COMMAND ${CMAKE_COMMAND} -E sleep 10
	)
	set_tests_properties(integration-docker-wait PROPERTIES
		FIXTURES_SETUP IntegrationFixture
		DEPENDS integration-docker-start
		LABELS "integration;fixture"
	)

	# The actual integration tests
	add_test(NAME neoactivemq-integration-tests COMMAND neoactivemq-integration-test)
	set_tests_properties(neoactivemq-integration-tests PROPERTIES
		TIMEOUT 1200
		LABELS "integration"
		FIXTURES_REQUIRED IntegrationFixture
		ENVIRONMENT "CTEST_OUTPUT_ON_FAILURE=1"
	)

	# Cleanup fixture: Stop Docker after integration tests
	add_test(NAME integration-docker-stop
		COMMAND docker compose down
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
	)
	set_tests_properties(integration-docker-stop PROPERTIES
		FIXTURES_CLEANUP IntegrationFixture
		LABELS "integration;fixture"
	)

	# Docker targets for integration tests
	# These targets help start/stop ActiveMQ broker for integration testing

	# Target: Start ActiveMQ broker with Docker Compose
	add_custom_target(docker-up
		COMMAND docker compose up -d
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		COMMENT "Starting ActiveMQ broker with Docker Compose..."
	)

	# Target: Stop ActiveMQ broker
	add_custom_target(docker-down
		COMMAND docker compose down
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		COMMENT "Stopping ActiveMQ broker..."
	)

	# Target: View ActiveMQ logs
	add_custom_target(docker-logs
		COMMAND docker compose logs -f activemq
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		COMMENT "Viewing ActiveMQ logs (Ctrl+C to exit)..."
	)

	# Target: Restart ActiveMQ broker
	add_custom_target(docker-restart
		COMMAND docker compose restart
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		COMMENT "Restarting ActiveMQ broker..."
	)

	# Target: Show Docker container status
	add_custom_target(docker-ps
		COMMAND docker compose ps
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		COMMENT "Docker container status:"
	)

	# Convenience target: Build integration tests and ensure Docker is mentioned
	add_custom_target(integration-tests
		DEPENDS neoactivemq-integration-test
		COMMENT "Integration tests built. Start ActiveMQ with: cmake --build . --target docker-up"
	)

	# Full integration test workflow target
	add_custom_target(integration-full
		COMMAND docker compose up -d
		COMMAND ${CMAKE_COMMAND} -E sleep 10
		COMMAND ${CMAKE_COMMAND} -E echo "Running integration tests..."
		COMMAND $<TARGET_FILE:neoactivemq-integration-test>
		COMMAND docker compose down
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
		DEPENDS neoactivemq-integration-test
		COMMENT "Full integration test workflow (start broker, test, stop broker)..."
	)

	message(STATUS "Integration test Docker targets available:")
	message(STATUS "  cmake --build --preset <preset> --target docker-up         # Start ActiveMQ")
	message(STATUS "  cmake --build --preset <preset> --target docker-down       # Stop ActiveMQ")
	message(STATUS "  cmake --build --preset <preset> --target docker-logs       # View logs")
	message(STATUS "  cmake --build --preset <preset> --target integration-full  # Full workflow")
endif()

# Installation rules
include(GNUInstallDirs)

# Install libraries
install(TARGETS neoactivemq-cpp decaf activemq_core activemq_cms
	EXPORT neoactivemq-cpp-targets
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

# Install header files
install(DIRECTORY
	${CMAKE_SOURCE_DIR}/activemq-cpp/src/main/activemq
	${CMAKE_SOURCE_DIR}/activemq-cpp/src/main/cms
	${CMAKE_SOURCE_DIR}/activemq-cpp/src/main/decaf
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp"
)

# Install CMake config files for find_package() support
include(CMakePackageConfigHelpers)

# Generate the config file that includes the exports
configure_package_config_file(
	${CMAKE_CURRENT_SOURCE_DIR}/neoactivemq-cpp-config.cmake
	${CMAKE_CURRENT_BINARY_DIR}/neoactivemq-cpp-config.cmake
	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/neoactivemq-cpp
)

# Generate the version file for the config file
write_basic_package_version_file(
	${CMAKE_CURRENT_BINARY_DIR}/neoactivemq-cpp-config-version.cmake
	VERSION 1.0.0
	COMPATIBILITY SameMajorVersion
)

# Install the configuration files
install(FILES
	${CMAKE_CURRENT_BINARY_DIR}/neoactivemq-cpp-config.cmake
	${CMAKE_CURRENT_BINARY_DIR}/neoactivemq-cpp-config-version.cmake
	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/neoactivemq-cpp
)

# Export the targets to a script
install(EXPORT neoactivemq-cpp-targets
	FILE neoactivemq-cpp-targets.cmake
	NAMESPACE neoactivemq-cpp::
	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/neoactivemq-cpp
)

